CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.16

	- Increased the size of the IPP write buffer to 32k to
	  allow for larger attribute values and to provide more
	  efficient output of large numbers of attributes.
	- The polling daemon now retries the initial connection
	  to the remote server; this fixes a problem when the
	  remote server is unavailable when the scheduler starts
	  up...
	- The scheduler didn't validate Digest users against the
	  system group(s), so Digest and BasicDigest
	  authentication didn't work for administration
	  operations.
	- The scheduler now passes the SHLIB_PATH environment
	  variable to child processes (HP-UX shared libraries)
	- The scheduler now maps accesses from the loopback
	  interface to "localhost".
	- The cups-lpd mini-daemon sent a status code byte in
	  response to queue state commands, but those commands
	  only return textual data.


CHANGES IN CUPS V1.1.15-1

	- The lpc and lprm sources didn't include the CUPS
	  string function header, which is required on systems
	  that don't have their own snprintf() function.
	- The French manpage Makefile tried to install the
	  language subdirectories when it (obviously) didn't
	  have to.


CHANGES IN CUPS V1.1.15

	- Updated the CUPS license agreement for the new MacOS
	  license exception.
	- The printer-info attribute now defaults to the printer
	  name if no value has been set.
	- ppdOpen() and friends now add an "Auto" InputSlot
	  option if none is provided to automatically select the
	  correct tray.
	- Updated the ppdEmit() and ppdEmitFd() functions to
	  (re)mark the correct PageSize or PageRegion option
	  depending on the selected ManualFeed or InputSlot
	  options.
	- ppdEmitFd() didn't handle custom page sizes.
	- Darwin uses <pam/pam_appl.h> instead of
	  <security/pam_appl.h>.
	- The jobs.cgi web interface now handles all job
	  operations, allowing the administrator to allow "job
	  administrators" or operators to manage jobs (but not