@@ -1,5 +1,5 @@
 #
-# "$Id: cupsd.conf.in,v 1.2.2.4 2002/05/27 14:47:12 mike Exp $"
+# "$Id: cupsd.conf.in,v 1.2.2.5 2002/06/14 19:48:53 mike Exp $"
 #
 #   Sample configuration file for the Common UNIX Printing System (CUPS)
 #   scheduler.
@@ -602,6 +602,13 @@ Port 631
 #SystemGroup @CUPS_GROUP@
 
 #
+# RootCertDuration: How frequently the root certificate is regenerated.
+# Defaults to 300 seconds.
+#
+
+#RootCertDuration 300
+
+#
 # Access permissions for each directory served by the scheduler.
 # Locations are relative to DocumentRoot...
 #
@@ -747,5 +754,5 @@ Allow From 127.0.0.1
 </Location>
 
 #
-# End of "$Id: cupsd.conf.in,v 1.2.2.4 2002/05/27 14:47:12 mike Exp $".
+# End of "$Id: cupsd.conf.in,v 1.2.2.5 2002/06/14 19:48:53 mike Exp $".
 #
