@@ -3,6 +3,8 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.16
 
+	- Added the RootCertDuration directive to control how
+	  often the root authentication certificate is updated.
 	- Increased the size of the IPP write buffer to 32k to
 	  allow for larger attribute values and to provide more
 	  efficient output of large numbers of attributes.
